swagger improvements, share token cookies with frontend, accessToken in cookies, other refactors #24
