# backend/docs/swagger.yaml
@@ -53,7 +53,7 @@ definitions:
   models.LoginDto:
     properties:
       email:
-        example: email@gmail.com
+        example: email@example.com
         type: string
       password:
         example: VeryStrongPassword
@@ -125,7 +125,7 @@ definitions:
   models.SignUpDto:
     properties:
       email:
-        example: email@gmail.com
+        example: email@example.com
         type: string
       password:
         example: VeryStrongPassword
@@ -133,7 +133,7 @@ definitions:
         minLength: 8
         type: string
       username:
-        example: AurisTFG
+        example: john_doe_123
         maxLength: 100
         minLength: 3
         type: string
@@ -209,7 +209,7 @@ definitions:
   models.UserDto:
     properties:
       email:
-        example: AurisTFG@gmail.com
+        example: email@example.com
         type: string
       id:
         example: 526432ea-822b-4b5b-b1b3-34e8ab453e03
@@ -219,23 +219,8 @@ definitions:
         - $ref: '#/definitions/models.Role'
         example: admin
       username:
-        example: AurisTFG
+        example: john_doe_123
         type: string
-    type: object
-  responses.AuthLoginResponse:
-    properties:
-      accessToken:
-        type: string
-    type: object
-  responses.AuthRefreshTokenResponse:
-    properties:
-      accessToken:
-        type: string
-    type: object
-  responses.AuthSignUpResponse:
-    properties:
-      user:
-        $ref: '#/definitions/models.UserDto'
     type: object
   responses.BadRequestResponse:
     properties:
@@ -318,12 +303,14 @@ definitions:
 externalDocs:
   description: OpenAPI
   url: https://swagger.io/resources/open-api/
-host: https://matchmania-api-ripky.ondigitalocean.app
+host: localhost:8080
 info:
-  contact: {}
-  description: This is the API server for the MatchMania application.
+  contact:
+    name: AurisTFG
+    url: https://github.com/AurisTFG
+  description: Documentation for MatchMania API
   title: MatchMania API
-  version: "1.0"
+  version: 0.1.0
 paths:
   /auth/login:
     post:
@@ -340,10 +327,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/responses.AuthLoginResponse'
+        "204":
+          description: No Content
         "400":
           description: Bad Request
           schema:
@@ -368,14 +353,27 @@ paths:
       summary: Log out
       tags:
       - auth
-  /auth/refresh-token:
-    post:
-      description: Refresh token
+  /auth/me:
+    get:
+      description: Get current user
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/responses.AuthRefreshTokenResponse'
+            $ref: '#/definitions/responses.UserResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/responses.UnprocessableEntityResponse'
+      summary: Get current user
+      tags:
+      - auth
+  /auth/refresh:
+    post:
+      description: Refresh token
+      responses:
+        "204":
+          description: No Content
         "422":
           description: Unprocessable Entity
           schema:
@@ -398,10 +396,8 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/responses.AuthSignUpResponse'
+        "204":
+          description: No Content
         "400":
           description: Bad Request
           schema:
@@ -1057,4 +1053,6 @@ paths:
       summary: Get user by ID
       tags:
       - users
+schemes:
+- http
 swagger: "2.0"
